# openrcs

./: ChangeLog  LICENCE  README  configure.ac
openbsd-compat/: Makefile.am  NOTES  compat.h  defines.h  fgetln.c  getlogin.c  reallocarray.c
regress/: Makefile
regress/CVS/: Entries
src/: Makefile.am  buf.c  buf.h  ci.c  co.c  date.y  diff.c  diff.h  diff3.c  rcs.h  rcsdiff.c  rcsparse.c  rcsprog.c  rcsutil.c  worklist.c  worklist.h  xmalloc.c  xmalloc.h
src/CVS/: Entries
